==> 903257958/stm32_oop_driver/gd32f103c8_drivers/gd32f103c8_timer_irq/driver/uart.c <==
#include "uart.h"
#include <stdio.h>
#include <stdarg.h>
#include <string.h>
#define uart_io_clock_enable(port)									 \
    do {                                           				     \
        if (port == GPIOA)       rcu_periph_clock_enable(RCU_GPIOA); \
        else if (port == GPIOB)  rcu_periph_clock_enable(RCU_GPIOB); \
        else if (port == GPIOC)  rcu_periph_clock_enable(RCU_GPIOC); \
        else if (port == GPIOD)  rcu_periph_clock_enable(RCU_GPIOD); \
        else if (port == GPIOE)  rcu_periph_clock_enable(RCU_GPIOE); \
        else if (port == GPIOF)  rcu_periph_clock_enable(RCU_GPIOF); \
        else if (port == GPIOG)  rcu_periph_clock_enable(RCU_GPIOG); \
    } while (0)
#define uart_config_io_af_pp(port, pin)	\
        gpio_init(port, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, pin)
#define uart_config_io_in_pn(port, pin) \
    	gpio_init(port, GPIO_MODE_IN_FLOATING, GPIO_OSPEED_50MHZ, pin)
	#define UART0_AVAILABLE
	#define UART1_AVAILABLE
	#define UART2_AVAILABLE
	#define uart_clock_enable(uartx)                                       \
		do {                                                               \
			if (uartx == USART0) 	  rcu_periph_clock_enable(RCU_USART0); \
			else if (uartx == USART1) rcu_periph_clock_enable(RCU_USART1); \
			else if (uartx == USART2) rcu_periph_clock_enable(RCU_USART2); \
		} while (0)
	#define uart_dma_clock_enable(uartx) \
			rcu_periph_clock_enable(RCU_DMA0)

static void uart_dma_init(uart_dev_t *dev)
{
	uart_dma_clock_enable(dev->config.uartx);
	dma_deinit(uart_get_dma_periph(dev->config.uartx), uart_get_dma_channel(dev->config.uartx));

	dma_parameter_struct dma_init_struct;
	dma_init_struct.periph_addr = dev->config.uartx + 4;		// 外设基地址，数据寄存器偏移0x04
	dma_init_struct.periph_width = DMA_PERIPHERAL_WIDTH_8BIT;	// 外设数据宽度
	dma_init_struct.memory_addr = (uint32_t)dev->config.rx_buf;	// 内存基地址
	dma_init_struct.memory_width = DMA_MEMORY_WIDTH_8BIT;		// 内存数据宽度
	dma_init_struct.number = dev->config.rx_single_max + 1;		// 只有空闲中断才能判断接收完成，不会产生DMA完成中断
	dma_init_struct.priority = DMA_PRIORITY_HIGH;				// 优先级
	dma_init_struct.periph_inc = DMA_PERIPH_INCREASE_DISABLE;	// 外设不递增
	dma_init_struct.memory_inc = DMA_MEMORY_INCREASE_ENABLE;	// 内存递增
	dma_init_struct.direction = DMA_PERIPHERAL_TO_MEMORY;		// 从外设到内存
	dma_init(uart_get_dma_periph(dev->config.uartx), uart_get_dma_channel(dev->config.uartx), &dma_init_struct);

	dma_circulation_disable(uart_get_dma_periph(dev->config.uartx), uart_get_dma_channel(dev->config.uartx));
	dma_channel_enable(uart_get_dma_periph(dev->config.uartx), uart_get_dma_channel(dev->config.uartx));
	usart_dma_receive_config(dev->config.uartx, USART_RECEIVE_DMA_ENABLE);
}

static void uart_printf(uart_dev_t *dev, const char *format, va_list args)
{
	uint16_t i;

	vsnprintf((char *)dev->config.tx_buf, dev->config.tx_buf_size, format, args);
	for (i = 0; i < strlen((const char *)dev->config.tx_buf); i++) {
		while (usart_flag_get(dev->config.uartx, USART_FLAG_TBE) != 1);
		usart_data_transmit(dev->config.uartx, dev->config.tx_buf[i]);
	}
	while (usart_flag_get(dev->config.uartx, USART_FLAG_TC) != 1);
}

static void uart_send(uart_dev_t *dev, uint8_t *data, uint32_t len)
{
	uint32_t i;

	for (i = 0; i < len; i++) {
		usart_data_transmit(dev->config.uartx, data[i]);		// 将字节数据写入数据寄存器，写入后USART自动生成时序波形
		while (usart_flag_get(dev->config.uartx, USART_FLAG_TBE) == RESET);	// 等待发送完成
	}
}

void USART1_IRQHandler(void)
{
	volatile uint8_t clear;
	uart_dev_t *dev = uart_registered[uart_get_index(USART1)];	// 根据索引找到已注册的串口设备
	if (!dev)
		return;
	
	if (usart_interrupt_flag_get(USART1, USART_INT_FLAG_IDLE) != RESET) {
		/* 软件先读 USART_STAT ，再读 USART_DATA ，可清除空闲中断标志位 */
		usart_flag_get(USART1, USART_FLAG_IDLEF);
		usart_data_receive(USART1);

		/* DMA传输数据总量 - DMA数据剩余量 = 已接收数据量 */
		dev->rx_cb.data_cnt += ((dev->config.rx_single_max + 1) - dma_transfer_number_get(DMA0, DMA_CH5));

		/* 标记这一段数据的end */
		dev->rx_cb.index_in->end = &dev->config.rx_buf[dev->rx_cb.data_cnt - 1];

		/* 接收数据后in指针向后移动一位 */
		dev->rx_cb.index_in++;
		if (dev->rx_cb.index_in == dev->rx_cb.index_end)
			dev->rx_cb.index_in = &dev->rx_cb.index_buf[0];

		/* 判断数据缓冲区剩余大小 */
		if (dev->config.rx_buf_size - dev->rx_cb.data_cnt >= dev->config.rx_single_max) {
			/* 剩余大小足够再接收一次数据，标记下一段数据的start */
			dev->rx_cb.index_in->start = &dev->config.rx_buf[dev->rx_cb.data_cnt];
		} else {
			/* 剩余大小不够再接收一次数据，回卷 */
			dev->rx_cb.index_in->start = &dev->config.rx_buf[0];
			dev->rx_cb.data_cnt = 0;
		}

		/* DMA准备下一次接收 */
		dma_channel_disable(DMA0, DMA_CH5);
		dma_transfer_number_config(DMA0, DMA_CH5, dev->config.rx_single_max + 1);
		dma_memory_address_config(DMA0, DMA_CH5, (uint32_t)dev->rx_cb.index_in->start);
		dma_channel_enable(DMA0, DMA_CH5);
	}
}

void USART2_IRQHandler(void)
{
	volatile uint8_t clear;
	uart_dev_t *dev = uart_registered[uart_get_index(USART2)];	// 根据索引找到已注册的串口设备
	if (!dev)
		return;
	
	if (usart_interrupt_flag_get(USART2, USART_INT_FLAG_IDLE) != RESET) {
		/* 软件先读 USART_STAT ，再读 USART_DATA ，可清除空闲中断标志位 */
		usart_flag_get(USART2, USART_FLAG_IDLEF);
		usart_data_receive(USART2);

		/* DMA传输数据总量 - DMA数据剩余量 = 已接收数据量 */
		dev->rx_cb.data_cnt += ((dev->config.rx_single_max + 1) - dma_transfer_number_get(DMA0, DMA_CH2));

		/* 标记这一段数据的end */
		dev->rx_cb.index_in->end = &dev->config.rx_buf[dev->rx_cb.data_cnt - 1];

		/* 接收数据后in指针向后移动一位 */
		dev->rx_cb.index_in++;
		if (dev->rx_cb.index_in == dev->rx_cb.index_end)
			dev->rx_cb.index_in = &dev->rx_cb.index_buf[0];

		/* 判断数据缓冲区剩余大小 */
		if (dev->config.rx_buf_size - dev->rx_cb.data_cnt >= dev->config.rx_single_max) {
			/* 剩余大小足够再接收一次数据，标记下一段数据的start */
			dev->rx_cb.index_in->start = &dev->config.rx_buf[dev->rx_cb.data_cnt];
		} else {
			/* 剩余大小不够再接收一次数据，回卷 */
			dev->rx_cb.index_in->start = &dev->config.rx_buf[0];
			dev->rx_cb.data_cnt = 0;
		}

		/* DMA准备下一次接收 */
		dma_channel_disable(DMA0, DMA_CH2);
		dma_transfer_number_config(DMA0, DMA_CH2, dev->config.rx_single_max + 1);
		dma_memory_address_config(DMA0, DMA_CH2, (uint32_t)dev->rx_cb.index_in->start);
		dma_channel_enable(DMA0, DMA_CH2);
	}
}
