==> 903257958/stm32_oop_driver/stm32f103c8_drivers/stm32f103c8_uart/driver/uart.c <==
#include "uart.h"
#include <stdio.h>
#include <stdarg.h>
#include <string.h>
#define uart_io_clock_enable(port)                                             		  \
    do {                                                                       		  \
        if (port == GPIOA) 		RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE); \
        else if (port == GPIOB) RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE); \
        else if (port == GPIOC) RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC, ENABLE); \
        else if (port == GPIOD) RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOD, ENABLE); \
        else if (port == GPIOE) RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOE, ENABLE); \
        else if (port == GPIOF) RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOF, ENABLE); \
        else if (port == GPIOG) RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOG, ENABLE); \
    } while (0)
#define uart_config_io_af_pp(port, pin)                                        \
    do {                                                                       \
        GPIO_InitTypeDef GPIO_InitStructure;                                   \
        GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_AF_PP;                       \
        GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;                      \
        GPIO_InitStructure.GPIO_Pin   = pin;                                   \
        GPIO_Init(port, &GPIO_InitStructure);                                  \
    } while (0)

static void uart_dma_init(uart_dev_t *dev)
{
	uart_dma_clock_enable(dev->config.uartx);

	#if defined(STM32F10X_HD) || defined(STM32F10X_MD)
	
	DMA_DeInit(uart_get_dma_channel(dev->config.uartx));
	DMA_InitTypeDef DMA_InitStructure;
	DMA_InitStructure.DMA_PeripheralBaseAddr = (uint32_t)&dev->config.uartx->DR;	// 外设基地址
	DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;			// 外设数据宽度为8位
	DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;				// 外设地址寄存器不变
	DMA_InitStructure.DMA_MemoryBaseAddr = (uint32_t)dev->config.rx_buf;			// DMA内存基地址
	DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;					// 内存数据宽度为8位
	DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;							// 内存地址寄存器递增
	DMA_InitStructure.DMA_BufferSize = dev->config.rx_single_max + 1;				// 指定DMA缓冲区大小为单次最大接收量加1，只有空闲中断才能判断接收完成
	DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralSRC;								// 数据传输方向，从外设读取发送到内存
	DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;									// 工作在正常模式，一次传输后自动结束
	DMA_InitStructure.DMA_M2M = DMA_M2M_Disable;									// 没有设置为内存到内存传输
	DMA_InitStructure.DMA_Priority = DMA_Priority_High;								// 高优先级 
	DMA_Init(uart_get_dma_channel(dev->config.uartx), &DMA_InitStructure);

	DMA_Cmd(uart_get_dma_channel(dev->config.uartx), ENABLE);

	#elif defined(STM32F40_41xxx) || defined(STM32F411xE) || defined(STM32F429_439xx)

	DMA_DeInit(uart_get_dma_stream(dev->config.uartx));
	DMA_InitTypeDef DMA_InitStructure;
    DMA_InitStructure.DMA_Channel = uart_get_dma_channel(dev->config.uartx);			// 选择DMA通道
    DMA_InitStructure.DMA_PeripheralBaseAddr = (uint32_t)&dev->config.uartx->DR;		// DMA外设基地址
    DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;				// 外设数据单位8位
    DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;					// 外设地址不增
	DMA_InitStructure.DMA_Memory0BaseAddr = (uint32_t)dev->config.rx_buf;				// DMA内存基地址
    DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;						// 内存数据单位8位
    DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;								// 内存地址自增
	DMA_InitStructure.DMA_BufferSize = dev->config.rx_single_max + 1;					// 指定DMA缓冲区大小为单次最大接收量加1，只有空闲中断才能判断接收完成
    DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralToMemory;								// 从外设读取发送到内存
    DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;										// 工作在正常模式，一次传输后自动结束
    DMA_InitStructure.DMA_Priority = DMA_Priority_High;									// 优先级：高
    DMA_InitStructure.DMA_FIFOMode = DMA_FIFOMode_Disable;								// 禁用FIFO模式
    DMA_InitStructure.DMA_FIFOThreshold = DMA_FIFOThreshold_Full;						// FIFO阈值为满
    DMA_InitStructure.DMA_PeripheralBurst = DMA_PeripheralBurst_Single;					// 外设突发传输为单次
    DMA_InitStructure.DMA_MemoryBurst = DMA_MemoryBurst_Single;							// 内存突发传输为单次
    DMA_Init(uart_get_dma_stream(dev->config.uartx), &DMA_InitStructure);

    DMA_Cmd(uart_get_dma_stream(dev->config.uartx), ENABLE);

	#endif

	USART_DMACmd(dev->config.uartx, USART_DMAReq_Rx, ENABLE);
}

static void uart_printf(uart_dev_t *dev, const char *format, va_list args)
{
	uint16_t i;

	vsnprintf((char *)dev->config.tx_buf, dev->config.tx_buf_size, format, args);
	for (i = 0; i < strlen((const char *)dev->config.tx_buf); i++) {
		while (USART_GetFlagStatus(dev->config.uartx, USART_FLAG_TXE) != 1);
		USART_SendData(dev->config.uartx, dev->config.tx_buf[i]);
	}
	while (USART_GetFlagStatus(dev->config.uartx, USART_FLAG_TC) != 1);
}

static void uart_send(uart_dev_t *dev, uint8_t *data, uint32_t len)
{
	uint32_t i;

	for (i = 0; i < len; i++) {
		USART_SendData(dev->config.uartx, data[i]);		// 将字节数据写入数据寄存器，写入后USART自动生成时序波形
		while (USART_GetFlagStatus(dev->config.uartx, USART_FLAG_TXE) == RESET);	// 等待发送完成
	}
}

void USART1_IRQHandler(void)
{
	volatile uint8_t clear;
	uart_dev_t *dev = uart_registered[uart_get_index(USART1)];	// 根据索引找到已注册的串口设备
	if (!dev) return;
	
	if (USART_GetITStatus(USART1, USART_IT_IDLE) != RESET) {
		/* 清除空闲中断 */
		clear = USART1->SR;
		clear = USART1->DR;
	
		/* DMA传输数据总量 - DMA数据剩余量 = 已接收数据量 */
		#if defined(STM32F10X_MD) || defined(STM32F10X_HD)
		dev->rx_cb.data_cnt += ((dev->config.rx_single_max + 1) - DMA_GetCurrDataCounter(DMA1_Channel5));

		#elif defined(STM32F40_41xxx) || defined(STM32F411xE) || defined(STM32F429_439xx)
		dev->rx_cb.data_cnt += ((dev->config.rx_single_max + 1) - DMA_GetCurrDataCounter(DMA2_Stream5));

		#endif

		/* 标记这一段数据的end */
		dev->rx_cb.index_in->end = &dev->config.rx_buf[dev->rx_cb.data_cnt - 1];

		/* 接收数据后in指针向后移动一位 */
		dev->rx_cb.index_in++;
		if (dev->rx_cb.index_in == dev->rx_cb.index_end)
			dev->rx_cb.index_in = &dev->rx_cb.index_buf[0];

		/* 判断数据缓冲区剩余大小 */
		if (dev->config.rx_buf_size - dev->rx_cb.data_cnt >= dev->config.rx_single_max) {
			/* 剩余大小足够再接收一次数据，标记下一段数据的start */
			dev->rx_cb.index_in->start = &dev->config.rx_buf[dev->rx_cb.data_cnt];
		} else {
			/* 剩余大小不够再接收一次数据，回卷 */
			dev->rx_cb.index_in->start = &dev->config.rx_buf[0];
			dev->rx_cb.data_cnt = 0;
		}

		/* DMA准备下一次接收 */
		#if defined(STM32F10X_MD) || defined(STM32F10X_HD)
		DMA_Cmd(DMA1_Channel5, DISABLE);								// 关闭DMA
		while(((DMA1_Channel5->CCR) & DMA_CCR1_EN) == 1);				// 等待DMA真正关闭
		DMA1_Channel5->CNDTR = dev->config.rx_single_max + 1;			// 设置数据长度
		DMA1_Channel5->CMAR = (uint32_t)(dev->rx_cb.index_in->start);	// 设置内存地址
		DMA_Cmd(DMA1_Channel5, ENABLE);									// 开启DMA

		#elif defined(STM32F40_41xxx) || defined(STM32F411xE) || defined(STM32F429_439xx)
		DMA_Cmd(DMA2_Stream5, DISABLE);									// 关闭DMA
		while ((DMA2_Stream5->CR & DMA_SxCR_EN) != 0);                  // 等待DMA真正关闭
		DMA2_Stream5->NDTR = dev->config.rx_single_max + 1;				// 设置数据长度
		DMA2_Stream5->M0AR = (uint32_t)(dev->rx_cb.index_in->start);   	// 设置内存地址
		DMA_ClearFlag(DMA2_Stream5, DMA_FLAG_TCIF5);					// 清除DMA传输完成中断标志位
		DMA_Cmd(DMA2_Stream5, ENABLE);									// 开启DMA
		#endif
	}
}

void USART2_IRQHandler(void)
{
	volatile uint8_t clear;
	uart_dev_t *dev = uart_registered[uart_get_index(USART2)];	// 根据索引找到已注册的串口设备
	if (!dev) return;

	if (USART_GetITStatus(USART2, USART_IT_IDLE) != RESET) {
		/* 清除空闲中断 */
		clear = USART2->SR;
		clear = USART2->DR;
	
		/* DMA传输数据总量 - DMA数据剩余量 = 已接收数据量 */
		#if defined(STM32F10X_MD) || defined(STM32F10X_HD)
		dev->rx_cb.data_cnt += ((dev->config.rx_single_max + 1) - DMA_GetCurrDataCounter(DMA1_Channel6));

		#elif defined(STM32F40_41xxx) || defined(STM32F411xE) || defined(STM32F429_439xx)
		dev->rx_cb.data_cnt += ((dev->config.rx_single_max + 1) - DMA_GetCurrDataCounter(DMA1_Stream5));

		#endif

		/* 标记这一段数据的end */
		dev->rx_cb.index_in->end = &dev->config.rx_buf[dev->rx_cb.data_cnt - 1];

		/* 接收数据后in指针向后移动一位 */
		dev->rx_cb.index_in++;
		if (dev->rx_cb.index_in == dev->rx_cb.index_end)
			dev->rx_cb.index_in = &dev->rx_cb.index_buf[0];

		/* 判断数据缓冲区剩余大小 */
		if (dev->config.rx_buf_size - dev->rx_cb.data_cnt >= dev->config.rx_single_max) {
			/* 剩余大小足够再接收一次数据，标记下一段数据的start */
			dev->rx_cb.index_in->start = &dev->config.rx_buf[dev->rx_cb.data_cnt];
		} else {
			/* 剩余大小不够再接收一次数据，回卷 */
			dev->rx_cb.index_in->start = &dev->config.rx_buf[0];
			dev->rx_cb.data_cnt = 0;
		}

		/* DMA准备下一次接收 */
		#if defined(STM32F10X_MD) || defined(STM32F10X_HD)
		DMA_Cmd(DMA1_Channel6, DISABLE);								// 关闭DMA
		while(((DMA1_Channel6->CCR) & DMA_CCR1_EN) == 1);				// 等待DMA真正关闭
		DMA1_Channel6->CNDTR = dev->config.rx_single_max + 1;			// 设置数据长度
		DMA1_Channel6->CMAR = (uint32_t)(dev->rx_cb.index_in->start);	// 设置内存地址
		DMA_Cmd(DMA1_Channel6, ENABLE);									// 开启DMA

		#elif defined(STM32F40_41xxx) || defined(STM32F411xE) || defined(STM32F429_439xx)
		DMA_Cmd(DMA1_Stream5, DISABLE);									// 关闭DMA
		while ((DMA1_Stream5->CR & DMA_SxCR_EN) != 0);                  // 等待DMA真正关闭
		DMA1_Stream5->NDTR = dev->config.rx_single_max + 1;				// 设置数据长度
		DMA1_Stream5->M0AR = (uint32_t)(dev->rx_cb.index_in->start);   	// 设置内存地址
		DMA_ClearFlag(DMA1_Stream5, DMA_FLAG_TCIF5);					// 清除DMA传输完成中断标志位
		DMA_Cmd(DMA1_Stream5, ENABLE);									// 开启DMA
		#endif
	}
}
